<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/rl_regist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_add"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="#2ea67f"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/register"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_regist_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/Username"
                                android:inputType="textPersonName"
                                android:paddingBottom="2dp"
                                android:paddingTop="5dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_regist_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/Email"
                                android:inputType="textEmailAddress"
                                android:paddingBottom="2dp"
                                android:paddingTop="5dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_regist_password"

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/Password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:paddingTop="5dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_repeatpassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/repeat_password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:paddingTop="5dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/bt_next"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bt_shape_2"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/next"
                        android:textColor="#2fa881">

                    </Button>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/cv_add"
                android:layout_alignTop="@id/cv_add"
                android:layout_marginEnd="-20dp"
                android:layout_marginTop="-40dp"
                android:src="@drawable/plus_x"
                android:transitionName="loginFab"
                app:fabSize="normal" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp">

                        <View
                            android:layout_width="8dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:background="#2fa881" />

                        <TextView
                            android:id="@+id/tv_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="50dp"
                            android:text="@string/login"
                            android:textColor="#FFCC00"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#c5c5c5">

                            <EditText
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/Username"
                                android:inputType="textPersonName"
                                android:paddingBottom="2dp"
                                android:paddingTop="5dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#c5c5c5"
                            app:passwordToggleDrawable="@drawable/eye"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/bg_color">

                            <EditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/Password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:paddingTop="5dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="25dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/bt_go"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bt_shape"
                            android:stateListAnimator="@drawable/state_list_animator_z"
                            android:text="@string/go"
                            android:textColor="#d3d3d3">

                        </Button>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_forgetpsd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/forgot_your_password"
                        android:textColor="#9a9a9a"
                        android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/cv"
                android:layout_alignTop="@id/cv"
                android:layout_marginEnd="-20dp"
                android:layout_marginTop="-40dp"
                android:src="@drawable/plus"
                android:transitionName="loginFab"
                app:fabSize="normal" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
